Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextUndefined.quorum
class Main
    action Main
        Object v = undefined
        Test(v)
    end

    action Test(text var)
    end
end
